@@ -1,6 +1,9 @@
 TRUNK
   - build chaining implemented w/ triggers
   - recognized NetBSD as a platform
+  - some optimizations for dashboard / CCTray performance
+  - data version of ./projects directory is stored, and necessary migrations are run automatically if cruise version
+    number is bigger than data version
   - [bugfix] no longer passing in 'production' as RAILS_ENV to rake cruise
 
 ------------------------------------------------------------------------------------------------------------------------
